# 3dVisualizer

./: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Drawer.cpp  Drawer.h  Image.cpp  Image.h  KdTree.cpp  KdTree.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Parallelogram.cpp  Parallelogram.h  Point.cpp  Point.h  Primitive.cpp  Primitive.h  Ray.h  RtReader.cpp  RtReader.h  Sphere.cpp  Sphere.h  StlReader.cpp  StlReader.h  Test.txt  ThreadPool.cpp  Triangle.cpp  Triangle.h  World.cpp  World.h  main.cpp
GeneralClasses/: Camera.cpp  Camera.h  LightSource.h  Point.cpp  Point.h  Ray.cpp  ThreadPool.h
PixelToaster-Source-1.2.0/source/: AppleDisplay.h  ApplePlatform.h  AppleTimer.h  Common.h  Conversion.h  NullDisplay.h  NullPlatform.h  PixelToaster.cpp  PixelToaster.h  UnixDisplay.h  UnixPlatform.h  UnixTimer.h  WindowsAdapter.h  WindowsDevice.h  WindowsDisplay.h  WindowsPlatform.h  WindowsTimer.h  WindowsWindow.h
Primitives/: Primitive.h  Sphere.h  Triangle.cpp  Triangle.h
PrincipalClasses/: Drawer.h  Image.cpp  Image.h  KdTree.cpp  KdTree.h  World.cpp  World.h
Readers/: RtReader.cpp  RtReader.h  StlReader.cpp  StlReader.h
