cmake_minimum_required(VERSION 3.3)
project(3dVisualizer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
set(LIB_PATH PixelToaster-Source-1.2.0/source)
include_directories(${LIB_PATH})
set(LIB ${LIB_PATH}/PixelToaster.cpp)
set(SOURCE_FILES main.cpp World.cpp World.h Primitive.h Color.cpp Color.h Point.cpp Point.h ${LIB} Ray.cpp Ray.h Drawer.cpp Drawer.h Image.cpp Image.h LightSource.cpp LightSource.h Camera.cpp Camera.h Triangle.cpp Triangle.h Primitive.cpp StlReader.cpp StlReader.h Parallelogram.cpp Parallelogram.h Sphere.cpp Sphere.h RtReader.cpp RtReader.h Material.cpp Material.h KdTree.cpp KdTree.h ThreadPool.h ThreadPool.cpp)
add_executable(3dVisualizer ${SOURCE_FILES})
target_link_libraries(3dVisualizer d3d9 dxguid)