cmake_minimum_required(VERSION 3.3)
project(3dVisualizer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
set(LIB_PATH PixelToaster-Source-1.2.0/source)
include_directories(${LIB_PATH})
set(LIB ${LIB_PATH}/PixelToaster.cpp)
set(SOURCE_FILES main.cpp PrincipalClasses/World.cpp PrincipalClasses/World.h Primitives/Primitive.h GeneralClasses/Color.cpp GeneralClasses/Color.h GeneralClasses/Point.cpp GeneralClasses/Point.h ${LIB} GeneralClasses/Ray.cpp GeneralClasses/Ray.h PrincipalClasses/Drawer.cpp PrincipalClasses/Drawer.h PrincipalClasses/Image.cpp PrincipalClasses/Image.h GeneralClasses/LightSource.cpp GeneralClasses/LightSource.h GeneralClasses/Camera.cpp GeneralClasses/Camera.h Primitives/Triangle.cpp Primitives/Triangle.h Primitives/Primitive.cpp Readers/StlReader.cpp Readers/StlReader.h Primitives/Parallelogram.cpp Primitives/Parallelogram.h Primitives/Sphere.cpp Primitives/Sphere.h Readers/RtReader.cpp Readers/RtReader.h GeneralClasses/Material.cpp GeneralClasses/Material.h PrincipalClasses/KdTree.cpp PrincipalClasses/KdTree.h GeneralClasses/ThreadPool.h GeneralClasses/ThreadPool.cpp)
add_executable(3dVisualizer ${SOURCE_FILES})
target_link_libraries(3dVisualizer d3d9 dxguid)